pas touché au compte rendu, j'ai tenté de faire un rendu plus naturel sur les normales mais j'ai l'impression que quelque chose nous a échappé sur le calcul des coordonnées parce que ca rend pas du tout comme dans l'exemple (j'ai modifié que le code du ossier HOME, le SCHOOL est intacte)

--- a/cr/girot_difolco_gpu_shadersavances.tex
+++ b/cr/girot_difolco_gpu_shadersavances.tex
@@ -71,7 +71,7 @@ Pour simplifier nous aurions pu utiliser un simple normal mapping en orientant s
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.5\textwidth]{figures/lighting_problem.png}\label{lighting_problem}
+\includegraphics[width=0.5\textwidth]{figures/lighting_problem.PNG}\label{lighting_problem}
 \caption{•}
 \end{figure}
 
